[package]
name = "cargo-bom"
version = "0.7.0"
authors = [ "Ossi Herrala <oherrala@iki.fi>" ]
license = "MIT"
edition = "2024"

description = "Bill of Materials for Rust Crates"
homepage = "https://github.com/sensorfu/cargo-bom#readme"
repository = "https://github.com/sensorfu/cargo-bom"
readme = "README.md"

categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
keywords = ["bom", "bill-of-materials", "ingredients", "dependencies", "deps"]

[profile.release]
lto = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = [ "derive" ] }
cargo_metadata = "0.23"
itertools = "0.14"
tabled = "0.20"
