[package]
name = "cargo-bom"
version = "0.7.1"
authors = [ "Ossi Herrala <oherrala@iki.fi>" ]
license = "MIT"
edition = "2024"

description = "Bill of Materials for Rust Crates"
homepage = "https://github.com/sensorfu/cargo-bom#readme"
repository = "https://github.com/sensorfu/cargo-bom"
readme = "README.md"

categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
keywords = ["bom", "bill-of-materials", "ingredients", "dependencies", "deps"]

[profile.release]
lto = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = [ "derive" ] }
cargo_metadata = "0.23"
tabled = "0.20"

[workspace.lints.rust]
# Lint groups
deprecated-safe = { level = "deny", priority = -1 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
let-underscore = { level = "deny", priority = -1 }
nonstandard-style = { level = "deny", priority = -1 }
refining-impl-trait = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
rust-2018-idioms  = { level = "deny", priority = -1 }
rust-2021-compatibility = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "deny", priority = -1 }

# Lonely lints
unsafe-code = "deny"

[workspace.lints.clippy]
# See https://doc.rust-lang.org/nightly/clippy/lints.html
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
